--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-observaciones/tab-inf-observaciones.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-observaciones/tab-inf-observaciones.component.html
@@ -1,1 +1,1 @@
-<textarea matInput name="questionText" cols="35" rows="10"></textarea>
+<textarea [class]="opcionBoton === opcionesBoton.NUEVO || opcionBoton === opcionesBoton.EDITAR ? '':'divDisabled'" matInput name="questionText" cols="35" rows="10"></textarea>
