--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-temp-alm/tab-sup-datos-temp-alm.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-temp-alm/tab-sup-datos-temp-alm.component.html
@@ -1,5 +1,5 @@
 
-<div class="m-card">
+<div class="m-card" [class]="opcionBoton === opcionesBoton.NUEVO || opcionBoton === opcionesBoton.EDITAR ? '':'divDisabled'">
   <mat-checkbox class="example-margin">Temperatura Ambiente</mat-checkbox>
   <br>
   <mat-checkbox class="example-margin">Temperatura Controlada</mat-checkbox>
