--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-generales/tab-sup-datos-generales.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-generales/tab-sup-datos-generales.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols gap-4 p-2">
+<div class="grid grid-cols gap-4 p-2" [class]="opcionBoton === opcionesBoton.NUEVO || opcionBoton === opcionesBoton.EDITAR ? '':'divDisabled'">
   <div class="col-start-1 col-end-4 m-card">
     <div class="flex w-full">
       <div class="flex flex-col gap-2 w-full p-2">
