--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-personal/tab-sup-datos-personal.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-personal/tab-sup-datos-personal.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-1">
+<div class="flex flex-col gap-1" [class]="opcionBoton === opcionesBoton.NUEVO || opcionBoton === opcionesBoton.EDITAR ? '':'divDisabled'">
   <div class="flex w-full">
     <div class="m-card">
       <div class="grid grid-cols-1 gap-1">
