--- a/src/app/pages/establecimiento/modals/md-establec-solicitud-inscripcion/md-establec-solicitud-inscripcion.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-solicitud-inscripcion/md-establec-solicitud-inscripcion.component.html
@@ -12,7 +12,7 @@
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
           <label for="">DISA:</label>
-          <input type="text"  class="form-control inputText01" readonly [value]="textoDisa">
+          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="textoDisa">
           <button (click)="openModalBuscarDisa()" class="boton-icon"><span class="material-icons">search</span></button>
         </div>
       </div>
