--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-generales/tab-sup-datos-generales.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-generales/tab-sup-datos-generales.component.html
@@ -22,7 +22,7 @@
       <div class="flex flex-col gap-2 w-full p-2">
         <div class="flex gap-3 w-full">
           <div class="campo">
-            <input type="text"  class="form-control inputText01" readonly>
+            <input type="text" class="form-control inputText01 inputDisabled" readonly>
           </div>
         </div>
         <div class="flex gap-3 w-full">
@@ -36,7 +36,7 @@
         <div class="flex gap-3 w-full">
           <div class="campo">
             <label for="">Nro°:</label>
-            <input type="text"  class="form-control inputText01" readonly>
+            <input type="text" class="form-control inputText01 inputDisabled" readonly>
           </div>
         </div>
         <div class="flex gap-3 w-full">
@@ -153,7 +153,7 @@
       <div class="flex flex-col gap-2 w-full p-2">
         <div class="campo">
           <label for="">Ubiigeo:</label>
-          <input type="text"  class="form-control inputText01" readonly [value]="textoDepProDep">
+          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="textoDepProDep">
           <button (click)="openModalDistrito()"  class="boton-icon"><span class="material-icons">search</span></button>
         </div>
       </div>
@@ -194,7 +194,7 @@
       <div class="flex flex-col gap-2 w-full p-2">
         <div class="campo">
           <label for="">Horario:</label>
-          <input type="text"  class="form-control inputText01" readonly>
+          <input type="text"  class="form-control inputText01 inputDisabled" readonly>
         </div>
       </div>
     </div>
