--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-inicio-cierre/tab-sup-datos-inicio-cierre.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-inicio-cierre/tab-sup-datos-inicio-cierre.component.html
@@ -63,7 +63,7 @@
               </div>
               <div class="campo">
                 <label for="">Motivo:</label>
-                <input type="text" class="form-control inputText01" readonly [value]="textoMotivo">
+                <input type="text" class="form-control inputText01 inputDisabled" readonly [value]="textoMotivo">
                 <button class="boton-icon" (click)="openModalBuscarMotivo()" >
                   <span class="material-icons">search</span>
                 </button>
