--- a/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
+++ b/src/app/pages/establecimiento/tab-establec-datos-generales/tab-establec-datos-generales.component.html
@@ -390,7 +390,7 @@
             <button (click)="onMostarCampos()" class="boton-icon bnt01"><span class="material-icons">add</span></button>
             <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
             <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
-            <button (click)="onGuardarHorario()" *ngIf="selecionarDiasIni != null && selecionarDiasFin != null && selecionarFechaIni != null && selecionarFechaFin != null" class="boton-icon bnt01"><span class="material-icons">save</span></button>
+            <button (click)="onGuardarHorario()" *ngIf="selecionarDiasIni != null && selecionarDiasFin != null && selecionarHoraIni != null && selecionarHoraFin != null" class="boton-icon bnt01"><span class="material-icons">save</span></button>
             <button (click)="onOcultarCampos()" class="boton-icon bnt01"><span class="material-icons">cancel</span></button>
           </div>
         </div>
@@ -418,27 +418,27 @@
           </div>
           <div class="campo">
             <label for="">Hr Ini:</label>
-            <input type="time" [(ngModel)]="selecionarFechaIni">
+            <input type="time" [(ngModel)]="selecionarHoraIni">
           </div>
           <div class="campo">
             <label for="">Fin:</label>
-            <input type="time" [(ngModel)]="selecionarFechaFin">
+            <input type="time" [(ngModel)]="selecionarHoraFin">
           </div>
         </div>
 
         <table mat-table [dataSource]="dataSourceHorario" class="table border">
           <ng-container matColumnDef="dia">
             <th mat-header-cell *matHeaderCellDef>Día</th>
-            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.dia}} </td>
           </ng-container>
 
           <ng-container matColumnDef="horario">
             <th mat-header-cell *matHeaderCellDef>Horario</th>
-            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.horario}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumnsHorario"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumnsHorario;"></tr>
+          <tr mat-row (click)="selectRowHorario(row, i)" *matRowDef="let row; index as i; columns: displayedColumnsHorario;"></tr>
         </table>
         <mat-paginator [pageSizeOptions]="[3, 6, 9]"
                        showFirstLastButtons
@@ -448,11 +448,11 @@
         <table mat-table [dataSource]="dataSourceHorarioDetalle" class="table border">
           <ng-container matColumnDef="horario_detalle">
             <th mat-header-cell *matHeaderCellDef>Detalle</th>
-            <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.detalle}} </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumnsHorarioDetalle"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumnsHorarioDetalle;"></tr>
+          <tr mat-row (click)="selectRowDetalleHorario(row, i)" *matRowDef="let row; index as i; columns: displayedColumnsHorarioDetalle;"></tr>
         </table>
         <mat-paginator [pageSizeOptions]="[3, 6, 9]"
                        showFirstLastButtons
