acciones Representante legal

--- a/src/app/pages/establecimiento/modals/md-establec-busqueda-representante-legal/md-establec-busqueda-representante-legal.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-busqueda-representante-legal/md-establec-busqueda-representante-legal.component.html
@@ -26,7 +26,7 @@
         <div class="campo">
           <label for="">DISA:</label>
           <div class="flex gap-2 w-full items-center">
-            <input type="text"  class="form-control inputText01" readonly [value]="textoDisa">
+            <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="textoDisa">
             <button (click)="openModalBuscarDisa()" class="boton-icon"><span class="material-icons">search</span></button>
           </div>
         </div>
