--- a/src/app/pages/establecimiento/modals/md-establec-registro-personal/md-establec-registro-personal.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-registro-personal/md-establec-registro-personal.component.html
@@ -38,7 +38,7 @@
         </div>
         <div class="campo">
           <label for="">Nro° Colegiatura:</label>
-          <input type="text" class="form-control inputText01 inputDisabled" readonly [value]="textoNombrPersonal">
+          <input type="text" class="form-control inputText01 inputDisabled" readonly [value]="textoColegiaturaPersonal">
         </div>
         <div class="campo">
           <label for="">Cargo:</label>
