--- a/src/app/pages/establecimiento/modals/md-establec-busqueda-regente/md-establec-busqueda-regente.component.html
+++ b/src/app/pages/establecimiento/modals/md-establec-busqueda-regente/md-establec-busqueda-regente.component.html
@@ -12,18 +12,20 @@
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
           <label for="">Lugar de Registro:</label>
-          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="">
-          <button class="boton-icon"><span class="material-icons">search</span></button>
+          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="textoDisa">
+          <button class="boton-icon" (click)="openModalBuscarDisa()"><span class="material-icons">search</span></button>
         </div>
       </div>
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
           <label for="">Procedencia:</label>
-          <ng-select [items]="listOpcionesBusqueda"
+          <ng-select
+            [items]="listaProcedenciaRegente"
+            [(ngModel)]="codigoSelecionarProcedenciaRegente"
             bindLabel="nombre"
             bindValue="codigo"
-            (change)="onChangeBuscarPor($event)"
-          >
+            (change)="onChangeProcedenciaRegente($event)"
+            >
           </ng-select>
         </div>
       </div>
@@ -32,18 +34,21 @@
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
           <label for="">Profesión:</label>
-          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="">
-          <button class="boton-icon"><span class="material-icons">search</span></button>
+          <input type="text"  class="form-control inputText01 inputDisabled" readonly [value]="textoProfesion">
+          <button class="boton-icon" (click)="openModalBuscarProfesion()"><span class="material-icons">search</span></button>
         </div>
       </div>
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
           <label for="">Estado:</label>
-          <ng-select [items]="listOpcionesBusqueda"
+          <ng-select
+            [readonly]="true"
+            [items]="listaEstadoRegente"
+            [(ngModel)]="codigoSelecionarEstadoRegente"
             bindLabel="nombre"
             bindValue="codigo"
-            (change)="onChangeBuscarPor($event)"
-          >
+            (change)="onChangeEstadoRegente($event)"
+            >
           </ng-select>
         </div>
       </div>
@@ -72,12 +77,76 @@
       </div>
       <div class="flex flex-col gap-1 w-full p-4">
         <div class="campo">
-          <button class="btn btn-primary"><mat-icon>search</mat-icon> Recuperar</button>
+          <button class="btn btn-primary" (click)="onRecuperar()"><mat-icon>search</mat-icon> Recuperar</button>
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="grid grid-cols gap-4 p-2">
+  <table mat-table [dataSource]="dataSource" class="table border">
 
+    <ng-container matColumnDef="nReg">
+      <th mat-header-cell *matHeaderCellDef>N° Reg</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDCODIGO}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="fecInsc">
+      <th mat-header-cell *matHeaderCellDef>Fec. Insc.</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDFECHINS}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDNOMBCOMP}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tipDoc">
+      <th mat-header-cell *matHeaderCellDef>Tip. Doc.</th>
+      <td mat-cell *matCellDef="let element"> {{element.TIDABREVIA}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nDocId">
+      <th mat-header-cell *matHeaderCellDef>N° Doc. Id.</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDNUMEDOCID}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nRuc">
+      <th mat-header-cell *matHeaderCellDef>N° Ruc</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDRUC}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nColeg">
+      <th mat-header-cell *matHeaderCellDef>N° Coleg.</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDNUMECLG}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="sexo">
+      <th mat-header-cell *matHeaderCellDef>Sexo</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDSEXO}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="proc">
+      <th mat-header-cell *matHeaderCellDef>Proc.</th>
+      <td mat-cell *matCellDef="let element"> {{element.PRCCODIGO}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="sit">
+      <th mat-header-cell *matHeaderCellDef>Sit.</th>
+      <td mat-cell *matCellDef="let element"> {{element.EDDABREVIA}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="telefono">
+      <th mat-header-cell *matHeaderCellDef>Telefono</th>
+      <td mat-cell *matCellDef="let element"> {{element.RGDTLFFIJ1}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row (click)="selectRow(row)" *matRowDef="let row; columns: displayedColumns;"
+    ></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
 </div>
